# Defects4REST

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
bug_mining_framework/: README.md  github_issue_processor.py  launch_minebugs.sh  mine_bugs.sh
bug_replication/: README.md
bug_replication/awx/: README.md
bug_replication/awx/awx#7243/: README.md
bug_replication/awx/awx#8305/: README.md
bug_replication/awx/awx#9222/: awx#9222_spec.json
bug_replication/awx/awx#9472/: README.md
bug_replication/dolibarr/: README.md
bug_replication/dolibarr/dolibarr#23179/: README.md
bug_replication/dolibarr/dolibarr#23415/: README.md  dolibarr#23415_spec.json
bug_replication/dolibarr/dolibarr#24661/: dolibarr#24661_spec.json
bug_replication/dolibarr/dolibarr#26066/: dolibarr#26066_spec.json
bug_replication/dolibarr/dolibarr#26881/: README.md
bug_replication/dolibarr/dolibarr#29372/: README.md
bug_replication/dolibarr/dolibarr#29421/: README.md
bug_replication/enviroCar-server/: README.md
bug_replication/flowable-engine/: README.md
bug_replication/kafka-rest/: README.md
bug_replication/mastodon/: README.md
bug_replication/netbox/: README.md
bug_replication/nocodb/: README.md
bug_replication/podman/: README.md
bug_replication/restcountries/: README.md
bug_replication/seaweedfs/: README.md
bug_replication/signal-cli-rest-api/: README.md
defects4rest/: __init__.py  cli.py
docs/: ADDING_BUGS.md
docs/commands/: checkout.md  info.md
manual_bug_reproduction/awx/: README.md
manual_bug_reproduction/seaweedfs/: README.md
(+174 files in other folders)
